<resources>
    <string name="app_name">My Application</string>
    <string name="navigation">Содержание</string>
    <string name="Attributes">Атрибуты</string>
    <string name="TextView">TextView</string>
    <string name="Button">Button</string>
    <string name="Methods">Методы</string>
    <string name="method_of_activity">Методы активности</string>
    <string name="text_view_attributes">XML - Атрибуты TextView</string>
    <string name="allowUndo">allowUndo - Должна ли быть разрешена отмена для редактируемого текста. </string>
    <string name="autoLink">autoLink - Определяет, будут ли ссылки, такие как URL-адреса и адреса электронной почты, автоматически обнаруживаться и преобразовываться в интерактивные ссылки.  </string>
    <string name="autoSizeMaxTextSize">autoSizeMaxTextSize - Ограничение максимального размера текста, которое будет использоваться при автоматическом изменении размера текста.  </string>
    <string name="autoSizeMinTextSize">autoSizeMinTextSize - Ограничение минимального размера текста, которое будет использоваться при автоматическом изменении размера текста. </string>
    <string name="autoSizePresetSizes">autoSizePresetSizes - Ресурсный массив измерений, который будет использоваться в сочетании с autoSizeTextTypeустановленным значением uniform. </string>
    <string name="autoSizeStepGranularity">autoSizeStepGranularity - Укажите размер шага авторазмера, если autoSizeTextTypeустановлено значение uniform. </string>
    <string name="autoSizeTextType">autoSizeTextType - Укажите тип авторазмера. </string>
    <string name="autoText">autoText - Если установлено, указывает, что этот TextView имеет текстовый метод ввода и автоматически исправляет некоторые распространенные орфографические ошибки. </string>
    <string name="breakStrategy">breakStrategy - Стратегия разрыва (управление макетом абзаца). </string>
    <string name="bufferType">bufferType - Определяет минимальный тип, который возвращает функция getText(). </string>
    <string name="capitalize">capitalize - Если установлено, указывает, что этот TextView имеет текстовый метод ввода и должен автоматически использовать заглавные буквы при вводе пользователем. </string>
    <string name="cursorVisible">cursorVisible - Делает курсор видимым (по умолчанию) или невидимым. </string>
    <string name="digits">digits - Если установлено, указывает, что этот TextView имеет числовой метод ввода и что эти конкретные символы являются теми, которые он будет принимать. </string>
    <string name="addContentView">Метод addContentView() добавляет компонент к уже существующей разметке. </string>
    <string name="findViewById">Метод findViewById() позволяет получить ссылку на View, которая размещена в разметке через его идентификатор. Если вы используете фрагменты, то когда они загружаются в активность, то компоненты, входящие в состав фрагмента, становятся частью иерархии активности. И вы можете использовать метод findViewById() для получения ссылки к компоненту фрагмента. Не путать с одноимённым методом для класса View.</string>
    <string name="finish">C помощью метода finish() можно завершить работу активности. Если приложение состоит из одной активности, то этого делать не следует, так как система сама завершит работу приложения. Если же приложение содержит несколько активностей, между которыми нужно переключаться, то данный метод позволяет экономить ресурсы.</string>
    <string name="getFragmentManager">getFragmentManager. Каждая активность включает в себя Менеджер фрагментов для управления фрагментами, если они используются. Метод getFragmentManager() позволяет получить доступ к данному менеджеру. На сайте есть отдельные статьи, посвящённые фрагментам.</string>
    <string name="getParentActivityIntent">getParentActivityIntent. Возвращает намерение, которое может запускать активность, являющей родительской. Родительская активность прописывается в манифесте. Вы можете переопределить данное намерение для своих целей. Метод появился в API 16.</string>
    <string name="onActivityResult">onActivityResult. Дочерняя активность может произвольно возвратить назад объект Intent, содержащий любые дополнительные данные. Вся эта информация в родительской активности появляется через метод обратного вызова Activity.onActivityResult(), наряду с идентификатором, который она первоначально предоставила.

Если дочерняя активность завершится неудачно или будет закрыта пользователем без подтверждения ввода через кнопку Back, то родительская активность получит результат с кодом RESULT_CANCELED.

Метод принимает несколько параметров:

Код запроса - тот код, который использовался для запуска дочерней активности, возвращающий результат.
Результирующий код - код результата, поступающий от дочерней активности, как правило, RESULT_OK или RESULT_CANCELED
Данные - намерение может включать в себя различные данные в виде параметра extras внутри намерения.</string>
    <string name="onBackPressed">onBackPressed. Метод, позволяющий отследить нажатие на кнопку Back.</string>
    <string name="onConfigurationChanged">onConfigurationChanged. Метод, который вызывается при изменении конфигурации устройства. Если в манифесте были установлены специальные параметры у атрибута android:configChanges, то данный метод не будет вызван.</string>
    <string name="onPostCreate">onPostCreate. Новый метод, который появился в API 21. Он вызывается позже onCreate() и в нём можно получить значения размеров компонентов, которые недоступны при построении интерфейса в методе onCreate().</string>
    <string name="overridePendingTransition">Метод overridePendingTransition() позволяет задать анимацию при переходе от одной активности к другой. Пример смотрите здесь.</string>
    <string name="onRestoreInstanceState">У метода onRestoreInstanceState() есть такой же параметр Bundle, как у onCreate(), и вы можете восстанавливать сохранённые значения из метода onSaveInstanceState(). Во многих случаях это пример личных предпочтений, какой из двух методов использовать для восстановления данных.

Метод вызывается после метода onStart(). Система вызывает метод onRestoreInstanceState() только в том случае, если имеются сохранённые данные для восстановления.</string>
    <string name="onSaveInstanceState">onSaveInstanceState. Когда система завершает активность в принудительном порядке, чтобы освободить ресурсы для других приложений, пользователь может снова вызвать эту активность с сохранённым предыдущим состоянием. Чтобы зафиксировать состояние активности перед её уничтожением, в классе активности необходимо реализовать метод onSaveinstancestate().

Сам метод вызывается прямо перед методом onPause(). Он предоставляет возможность сохранять состояние пользовательского интерфейса активности в объект Bundle, который потом будет передаваться в методы onCreate() и onRestoreInstanceState(). В объект Bundle можно записать параметры, динамическое состояние активности как пары "ключ-значение". Когда активность будет снова вызвана, объект Bundle передаётся системой в качестве параметра в методы onCreate() и onRestoreInstanceState(), которые вызываются после onStart(), чтобы один из них или они оба могли установить активность в предыдущее состояние. Прежде чем передавать изменённый параметр Bundle в обработчик родительского класса, сохраните значения с помощью методов putXXX() и восстановите с помощью getXXX().

Используйте обработчик onSaveInstanceState() для сохранения состояния интерфейса (например, состояния флажков, текущего выделенного элемента или введённых, но не сохранённых данных), чтобы объект Activity при следующем входе в активное состояние мог вывести на экран тот же UI. Рассчитывайте, что перед завершением работы процесса во время активного состояния будут вызваны обработчики onSaveInstanceState и onPause.

В отличие от базовых методов, методы onSaveInstanceState() и onRestoreInstanceState() не относятся к методам жизненного цикла активности. Система будет вызывать их не во всех случаях. Например, Android вызывает onSaveinstancestate() прежде, чем активность становится уязвимой к уничтожению системой, но не вызывает его, когда экземпляр активности разрушается пользовательским действием (при нажатии клавиши BACK). В этом случае нет никаких причин для сохранения состояния активности.

Метод onSaveInstanceState() вызывается системой в случае изменения конфигурации устройства в процессе выполнения приложения (например, при вращении устройства пользователем или выдвижении физической клавиатуры устройства.

Поскольку метод onSaveinstanceState() вызывается не во всех случаях, его необходимо использовать только для сохранения промежуточного состояния активности. Для сохранения данных лучше использовать метод onPause().
Помните, что обработчик onSaveInstanceState() вызывается только тогда, когда активность переходит в пассивное состояние, а не когда она закрывается при вызове метода finish() или пользователь нажимает кнопку Назад.</string>
    <string name="onUserLeaveHint">onUserLeaveHint. Позволяет отследить нажатие кнопки Home


@Override
protected void onUserLeaveHint() {
    Toast toast = Toast.makeText(getApplicationContext(), "Нажата кнопка HOME", Toast.LENGTH_SHORT);
    toast.show();
    super.onUserLeaveHint();
}</string>
    <string name="requestWindowFeature">requestWindowFeature Метод позволяет задействовать дополнительные возможности для активности, например, выводить экран активности без заголовка.</string>
    <string name="onWindowFocusChanged">onWindowFocusChanged Метод позволяет определить момент получения фокуса вашим приложением.
Метод может быть полезен, так как он срабатывает позже метода onCreate(). Например, для вычисления размеров кнопки на экране этот метод предпочтительнее, так как уже известно, что все элементы загрузились и доступны, тогда как в onCreate() могут возвратиться пустые значения ширины и высоты кнопки.</string>
    <string name="setContentView"> setContentView. Изначально экран активности пуст. Чтобы разместить пользовательский интерфейс, необходимо вызвать метод setContentView(). У метода есть две перегруженные версии. Вы можете передать в параметре либо экземпляр компонента (View), либо идентификатор ресурса (наиболее распространённый способ).</string>
    <string name="setFeatureDrawableResource">setFeatureDrawableResource. С помощью данного метода можно вывести значки в правой части заголовка.</string>
    <string name="setRequestedOrientation">setRequestedOrientation. Метод позволяет программно изменить ориентацию экрана.</string>
    <string name="startActivity">Чтобы запустить новую активность, используется метод startActivity(Intent). Этот метод принимает единственный параметр — объект Intent, описывающий активность, которая будет запускаться.</string>
    <string name="startActivityForResult">startActivityForResult. Иногда требуется вернуть результат активности, когда она закрывается. Например, можно запустить активность, которая позволяет пользователю выбирать человека в списке контактов. При закрытии активность возвращает данные человека, который был выбран: его полное имя и телефон. В этом случае необходимо вызвать метод startActivityForResult()

Метод startActivityForResult(Intent, int) со вторым параметром, идентифицирующим запрос позволяет возвращать результат. Когда дочерняя активность закрывается, то в родительской активности срабатывает метод onActivityResult(int, int, Intent), который содержит возвращённый результат, определённый в родительской активности.
    </string>
    <string name="setResult">Когда активность завершится, вы можете вызвать метод setResult(int), чтобы возвратить данные назад в родительскую активность (до метода finish()). Этот метод возвращает код результата закрытия активности, который может быть стандартными результатами Activity.RESULT_CANCELED, Activity.RESULT_OK или определяемым пользователем результатом RESULT_FiRST_USER (можете придумать любую константу с целочисленным значением).</string>
    <string name="btn_back">Назад </string>
</resources>