<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/green"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/method_of_activity"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/addContentView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/findViewById"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/finish"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/getFragmentManager"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/getParentActivityIntent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onActivityResult"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:text="@string/onBackPressed"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onConfigurationChanged"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/startActivityForResult"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onPostCreate"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/overridePendingTransition"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onRestoreInstanceState"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onSaveInstanceState"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onUserLeaveHint"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/requestWindowFeature"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/onWindowFocusChanged"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/setContentView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/setFeatureDrawableResource"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:text="@string/setRequestedOrientation"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_blue"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/startActivity"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/back_yellow"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    android:text="@string/setResult"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/btn_back"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@color/red"
            android:visibility="visible"
            app:strokeColor="#0B0909"
            app:strokeWidth="2sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>